--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,12 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
-  a(href="/authenticate")
+  p please sign in with steam
+  a(href="/auth/steam")
     img(src='https://steamcommunity-a.akamaihd.net/public/images/signinthroughsteam/sits_02.png')
-      
+  br
+  a(href='/api/kill') kill.
+  br
+  a(href='/profile') view stats.
+  br
+  a(href='api/death') die.
